add a same line

--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,13 @@
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
     </div>
+
+    <form >
+        <input type="text" name="ccname" class="input" autocomplete="on">
+        <input type="number" name="cardnumber" class="input" autocomplete="on">
+        <input type="number" name="cvc" class="input" autocomplete="on">
+        <input type="number" name="cc-exp" class="input" autocomplete="on">
+
+    </form>
   </body>
 </html>
